--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "dev:all": "turbo run dev --parallel"
   },
   "devDependencies": {
     "prettier": "^3.6.0",
+    "tailwindcss": "^4.1.11",
     "turbo": "^2.5.4",
     "typescript": "5.8.2"
   },
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "packageManager": "pnpm@9.0.0",
   "engines": {
     "node": ">=18"
