fix registry fetch

--- a/apps/client/.npmrc
+++ b/apps/client/.npmrc
@@ -3,3 +3,5 @@ registry=https://registry.npmjs.org/
 strict-peer-dependencies=false
 fetch-retries=5
 fetch-timeout=60000
+@radix-ui:registry=https://registry.npmjs.org/
+@shadcn:registry=https://registry.npmjs.org/
