--- a/apps/client/.npmrc
+++ b/apps/client/.npmrc
@@ -1,7 +1,24 @@
+# apps/client/.npmrc
+
+# Core PNPM configuration
 package-manager=pnpm@8.6.12
-registry=https://registry.npmjs.org/
+
+# Registry settings
+registry=https://registry.npmmirror.com/  # Primary registry (Alibaba Cloud mirror)
+@radix-ui:registry=https://registry.npmjs.org/  # Specific registry for radix-ui
+@shadcn:registry=https://registry.npmjs.org/    # Specific registry for shadcn
+
+# Network optimization
+fetch-retries=10
+fetch-timeout=120000
+network-concurrency=1
+prefer-offline=true
+
+# Dependency resolution
 strict-peer-dependencies=false
-fetch-retries=5
-fetch-timeout=60000
-@radix-ui:registry=https://registry.npmjs.org/
-@shadcn:registry=https://registry.npmjs.org/
+auto-install-peers=true
+
+# Cache and performance
+prefer-frozen-lockfile=true
+shamefully-hoist=true
+side-effects-cache=true
