--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -31,5 +31,9 @@
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18",
+    "pnpm": ">=8.6.12"
   }
 }
