--- a/package.json
+++ b/package.json
@@ -15,12 +15,9 @@
     "turbo": "^2.5.4",
     "typescript": "5.8.2"
   },
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
   "packageManager": "pnpm@8.6.12",
   "engines": {
-    "node": ">=18"
+    "node": ">=18",
+    "pnpm": ">=8.6.12"
   }
 }
