--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "turbo": "^2.5.4",
     "typescript": "5.8.2"
   },
-  "packageManager": "pnpm@8.6.12",
   "engines": {
-    "node": ">=18",
-    "pnpm": ">=8.6.12"
+    "node": ">=18"
   }
 }
