Switch to npm, remove pnpm configs, and finalize for Vercel deployment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,8 @@ jobs:
         with:
           node-version: "18"
 
-      - uses: pnpm/action-setup@v4
-
       - name: Install dependencies
-        run: pnpm install
+        run: npm install
 
       - name: Build
-        run: pnpm build
+        run: npm run build
