--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
       "runtime": "nodejs18.x"
     }
   },
-  "buildCommand": "pnpm build",
-  "installCommand": "pnpm install",
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
   "framework": "nextjs"
 }
