Finalize npm migration, clean build, and ready for Vercel deployment

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "chat-app",
   "private": true,
   "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev",
+    "build": "turbo run build --filter=./apps/*",
+    "dev": "turbo run dev --filter=./apps/*",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
